--- a/GridProject/style.css
+++ b/GridProject/style.css
@@ -20,7 +20,14 @@ html,body{
 
 #left-top-left{
   /* background-color: crimson; */
-
+ padding: 40px;
+}
+#square{
+    height:25px;
+    width: 25px;
+    rotate: 45deg;
+    margin: 20px;
+    background-color: black;
 }
 #left-top-right{
     justify-self: right;
@@ -33,29 +40,68 @@ html,body{
     font-weight: 500;
 
 }
+
 #left-top-right h5{
 font-size: 18px;
 font-weight: 500;
-}
-
-#square{
-    height:25px;
-    width: 25px;
-    rotate: 45deg;
-    margin: 20px;
-    background-color: black;
-}
-#right{
-background-color: blueviolet;
-grid-column: 3;
-grid-row: 1/4;
+color: #666;
 }
 #left-center{
-background-color: royalblue;
+/* background-color: royalblue; */
 grid-column: 1 / 3;
+padding: 40px;
+}
+#left-center h1{
+    font-size: 7vh;
+    text-transform: uppercase;
+    line-height: 6.5vw;
+    font-weight: 500;
+    font-family: Arial, Helvetica, sans-serif;
+
+}
+#left-center h1:nth-child(2n){
+    text-align: center;
 }
 
 #left-bottom{
-background-color: burlywood;
+/* background-color: burlywood; */
 grid-column: 1 / 3;
 }
+
+#left-bottom p{
+    width: 70%;
+    font-size: 18px;
+    margin: 20px;
+    font-weight: 500px;
+    color: #666;
+
+}
+#right{
+/* background-color: blueviolet; */
+padding: 40px;
+padding-right: 150px;
+grid-column: 3;
+grid-row: 1/4;
+}
+#right video{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 3px;
+}
+#arrow{
+    position: absolute;
+    top: 50%;
+    left: 51%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: orangered;
+    padding: 30px;
+    color: #fff;
+    border-radius: 50%;
+    transform:translate(-50% , -50%);
+}
+#arrow i{
+    font-size: 40px;
+    }
