--- a/GridProject/style.css
+++ b/GridProject/style.css
@@ -52,7 +52,7 @@ grid-column: 1 / 3;
 padding: 40px;
 }
 #left-center h1{
-    font-size: 7vh;
+    font-size:6.5vh;
     text-transform: uppercase;
     line-height: 6.5vw;
     font-weight: 500;
@@ -105,3 +105,14 @@ grid-row: 1/4;
 #arrow i{
     font-size: 40px;
     }
+
+@media (max-width:600px){
+    #main{
+    height: 100%;
+    width:100%;
+    background-color: #dadada;
+    display: grid;
+    grid-template-columns: 25% 50%;
+    grid-template-rows: 30% 50% 20%;
+}
+}    
