--- a/shopJacket/style.css
+++ b/shopJacket/style.css
@@ -13,5 +13,89 @@ html , body{
 #main{
     height: 100%;
     width: 100%;
-    background-color: grey;
+    /* background-color: grey; */
+
+}
+
+#nav{
+    height: 100px;
+    width: 100%;
+    /* background-color: red; */
+    color: black;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 20px;
+    padding: 0 30px;
+}
+
+#nav h4{
+    font-size: 20px;
+}
+#nav i{
+    background-color: black;
+    color: antiquewhite;
+    font-size: 20px;
+    padding: 10px;
+    border-radius: 50%;
+}
+#center{
+    width: 100%;
+    /* background-color: lawngreen; */
+    padding: 40px 50px;
+}
+#center h1{
+    font-size: 80px;
+    font-weight: 500;
+    line-height: 85px;
+}
+
+#center-in{
+    height: 200px;
+    /* background-color: red; */
+    width: 100%;
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-between;
+}
+#center-in p{
+ font-size: 22px;
+ font-weight: 600;
+ line-height: 32px;
+}
+#right{
+    width: 20%;
+
+}
+.elem {
+    /* background-color: yellow; */
+    /* margin: 5px; */
+    padding: 20px 0;
+    border-top: 2px solid black;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.elem i{
+    font-size: 25px;
+    font-weight: 500;
+    opacity: 0;
+}
+.elem a{
+    color: black;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 20px;
+}
+
+.elem:hover i{
+    opacity: 1;
+}
+
+#bottom{
+    height: 40%;
+    width: 100%;
+    background-image: url(https://media.istockphoto.com/id/1317446149/photo/happy-young-african-american-woman-smiling-with-arms-crossed-and-looking-away-against-white.webp?a=1&b=1&s=612x612&w=0&k=20&c=eUf-euVYSPm3bgI06HlvL-mjXVDAl6Pe4um8xt9pi-g=);
+    background-size: cover;
+    background-position: 0 30%;
 }
