--- a/may28/Recipe/style.css
+++ b/may28/Recipe/style.css
@@ -8,8 +8,8 @@ html,body{
     width: 100%;
 }
 .container{
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     overflow-x: none;
     background-color: #e2e5e8;
     background-image: linear-gradient(98deg,#e2e5e8 0%,#ffffff 100%);
@@ -18,8 +18,8 @@ html,body{
 .navContainer{
     width: 100vw;
      min-height: 80px;
-     background-color: #0093E9;
-     background-image: linear-gradient(160deg,#0093E9 0%,#80D0C7 100%);
+     background-color: #000000;
+     background-image: linear-gradient(160deg,#000000 0%,#8085d0 100%);
     /* background-color: rgb(113, 113, 154,0.776); */
     /* display: flex; */
     display: flex;
@@ -28,6 +28,7 @@ html,body{
 }
 nav{
     width: 100%;
+    padding-right: 2rem;
 }
 #navList{ 
   margin-left: 15px;
@@ -35,7 +36,7 @@ nav{
   list-style: none;
   font-size: 2.5rem;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
 }
 #navLogo{
@@ -51,9 +52,12 @@ a{
     gap: 20px;
     
 }
+.footer{
+ width: 100%;
+}
 .footerBox{
-     background-color: #0093E9;
-     background-image: linear-gradient(160deg,#0093E9 0%,#80D0C7 100%);
+     background-color: #000000;
+     background-image: linear-gradient(160deg,#000000 0%,#8085d0 100%);
      
      width: 100%;
      text-align: center;
@@ -64,5 +68,74 @@ a{
     font-size: 2rem;
 }
 .contentBox{
-    width: 70%;
+    width: 50%;
+    margin: auto;
+    /* border: 1px solid black; */
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    gap: 100px;
+    padding: 3rem;
+    box-shadow: 0px 0px 30px black;
 }
+.item{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 25px;
+}
+.rightBox{
+    position: relative;
+    overflow: hidden;
+    transition: all 0.3s linear 0s;
+    box-shadow: 1px 1px 10px black;
+    border-radius: 20px;
+}
+.rightBox img{
+  margin-right: 50px;
+  height: 250px;
+  border-radius: 20px;
+
+}
+.rightBox:hover{
+ transform: scale(1.1);
+ transition: all 0.6s linear 0s;
+
+}
+.leftBox{
+    display: flex;
+    gap :20px;
+    flex-direction: column;
+}
+.leftBox h2{
+font-size: 2rem;
+}
+.ingBox{
+    font-size:1.4rem;
+}
+.recBox{
+    font-size: 1.1rem;
+}
+.rightBox .overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(36, 34, 34, 0.713);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 20px;
+    opacity: 0;
+    transition: all 0.3s linear 0s;
+
+}
+.rightBox:hover .overlay{
+    opacity: 1;
+}
+.rightBox .overlay span{
+    color: #ffffff;
+    font-size: 1.2rem;
+}
+
