--- a/may30/newGrid/grid1.css
+++ b/may30/newGrid/grid1.css
@@ -14,11 +14,8 @@ body{
     display: grid;
     padding: 4rem;
     gap: 2rem;
-    /* grid-template-rows: 100px 100px; */
-    grid-template-rows: repeat(4,1fr);
-    /* grid-template-columns: 100px 100px 100px; */
-    grid-template-columns: repeat(3,1fr);
-
+    grid-template-columns: repeat(1,1fr);
+    grid-template-rows: repeat(6,1fr);
 }
 
 
@@ -32,8 +29,16 @@ body{
     font-size: 2rem;
 
 }
+@media (min-width:768px) {
+   .container{
+     /* grid-template-rows: 100px 100px; */
+    grid-template-rows: repeat(4,1fr);
+    /* grid-template-columns: 100px 100px 100px; */
+    grid-template-columns: repeat(3,1fr);
 
-.header{
+
+   } 
+  .header{
     grid-column-start: 1;
     grid-column-end: 4;
 }
@@ -49,4 +54,5 @@ body{
 .content1{
     grid-column-start: 2;
     grid-column-end: 4;
+}  
 }
