--- a/PremierProject/style.css
+++ b/PremierProject/style.css
@@ -83,6 +83,8 @@ html,body{
     position: absolute;
     bottom: 0;
     padding: 3vw;
+    background-color: rgba(0, 0, 0, 0.155);
+    backdrop-filter: blur(2px);
     
 }
 
@@ -128,3 +130,139 @@ html,body{
 /* #over2 img{
     height: 3vh;
 } */
+
+#scroll{
+    height: 40vh;
+    width: 100%;
+    /* background-color: aqua; */
+    padding: 1vw;
+    white-space: nowrap;
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
+
+#container{
+    height: 95%;
+    width: 110%;
+    /* background-color: #c14444; */
+    padding: 1vw;
+    display: inline-block;
+    animation-name: anime;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+
+}
+#scroll img{
+    /* display: none; */
+    height: 100%;
+    width: 15%;
+    border-radius: 50%;
+    object-fit: cover;
+    margin: 1vw;
+    object-position: 30% 30%;
+
+}
+
+@keyframes anime{
+    from{
+        transform: translateX(0);
+    }
+    to{
+        transform: translateX(-100%);
+    }
+}
+
+#alphabet{
+    height: 12vh;
+    width: 100%;
+    /* background-color: red; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap:1vw;
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
+}
+#alphabet h5{
+    font-size: 2vw;
+    text-transform: uppercase;
+    font-weight: 400;
+    font-style: italic;
+    border-bottom: 2px solid #000;
+    letter-spacing: 4px;
+    margin-right: 2vw;
+}
+
+#alphabet h6{
+    font-size: 1vw;
+    text-transform: uppercase;
+    font-weight: 400;
+    font-style: italic;
+    /* border-bottom: 2px solid #000; */
+    letter-spacing: 4px;
+    padding: 0.5vw 0.7vw;
+    border-radius: 50%;
+    border: 2px solid rgba(0, 0, 0, 0);
+    transition: all ease 0.2s;
+}
+#alphabet h6:hover{
+    border: 2px solid #000;
+
+}
+
+#page2{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 2vw 5vw;
+
+}
+
+#part1{
+
+    height: 100%;
+    width: 50%;
+    background-image: url('https://plus.unsplash.com/premium_photo-1687186953637-78a495aec485?q=80&w=686&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+    background-size: cover;
+    background-position: center;
+    
+}
+
+#part2{
+    height: 100%;
+    width: 45%;
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+
+}
+#part2 img{
+    height: 70%;
+    width: 90%;
+    object-fit: cover;
+    object-position: 50% 10%;
+}
+
+#part-2-content{
+    display: flex;
+    justify-content: space-around;
+    gap: 1.5vw;
+    /* padding: 2vw; */
+
+}
+#part-2-content #p1{
+    width: 60%;
+    height: 50%;
+    font-size: 1.2vw;
+    font-weight: 700;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+
+#part-2-content #p2{
+    width: 50%;
+    font-weight: 300;
+}
