--- a/PremierProject/style.css
+++ b/PremierProject/style.css
@@ -55,7 +55,15 @@ html,body{
     font-size: 40px;
     letter-spacing: -1px;
 }
-
+#nav h1::after{
+  content: "©"; 
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-weight: 300;
+  font-size: 20px;
+  top: 8%;
+  left: 17.9%;
+  position: absolute;   
+}
 #center{
     height: 90%;
     width: 100%;
@@ -245,24 +253,124 @@ html,body{
     object-fit: cover;
     object-position: 50% 10%;
 }
-
 #part-2-content{
-    display: flex;
-    justify-content: space-around;
-    gap: 1.5vw;
-    /* padding: 2vw; */
-
-}
-#part-2-content #p1{
-    width: 60%;
+    width: 100%;
     height: 50%;
-    font-size: 1.2vw;
-    font-weight: 700;
+    display: flex;
+    justify-content: space-between;
+    gap: 1.5vw;
+    /* font-size: 1.2vw;
+    font-weight: 700; */
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-
-
-#part-2-content #p2{
+#part-2-content  #h3{
+   
+width: 50%;
+}
+#part-2-content  #p2{
     width: 50%;
-    font-weight: 300;
+    font-weight: 300; 
+    align-self: right;
+}
+
+#page3{
+    height: 100%;
+    width: 100%;
+    /* background-color: rebeccapurple; */
+    position: relative;
+    padding: 5vw 4vw;
+
+
+}
+
+#page3>h1{
+    text-align: center;
+    font-family: monument;
+    text-transform: uppercase;
+    font-size: 3vw;
+    margin-bottom: 7vh;
+}
+.elem{
+    height: 15vh;
+    width: 100%;
+    /* background-color: red; */
+    display: flex;align-items: center;
+    justify-content: space-between;
+    border-top: 2px solid black;
+    position: relative;
+
+}
+.elem img{
+    height: 100px;
+    width: 100px;
+    position: absolute;
+    border-radius: 50%;
+    left: 12%;
+    opacity: 0;
+    transition: all ease 0.5s;
+}
+.elem h4{
+    font-size: 1.2vw;
+    text-transform: uppercase;
+    font-weight: 500;
+    width: 10%;
+}
+.elem .elem-part2{
+    width: 45%;
+
+}
+.elem-part2 h1{
+    font-size: 2.7vw;
+    font-weight: 500;
+}
+.elem-part2 h5{
+    font-size: 1vw;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+.elem:nth-last-child(1){
+    border-bottom: 2px solid black;
+}
+
+.elem:hover img{
+    opacity: 1;
+    left: 24%;
+}
+#marque{
+    /* height: 20vh; */
+    width: 100%;
+    white-space: nowrap;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    padding: 1vw;
+    border-top: 2px solid #000;
+    border-bottom: 2px solid #000;
+    /* background-color: red; */
+}
+#marque h1{
+    display: inline-block;
+    font-size: 3vw;
+    text-transform: uppercase;
+    font-weight: 900;
+    -webkit-text-stroke: 2px black;
+    color: transparent;
+    font-family: monument;
+    margin-right: 16px;
+    letter-spacing: 2px;
+    animation-name: marque;
+    animation-duration: 4s ;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+@keyframes marque{
+    from{
+        transform: translateX(0);
+    }
+    to{
+        transform: translateX(calc(-100% - 20px));
+    }
+}
+#footer{
+    height: 100%;
+    width: 100%;
 }
