--- a/ShadowStudio/style.css
+++ b/ShadowStudio/style.css
@@ -1,7 +1,13 @@
+@font-face {
+    font-family: neue;
+    src: url('./NeueHaasDisplayMediu.ttf');
+}
+
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: neue;
 }
 html,body{
     height: 100%;
@@ -9,13 +15,14 @@ html,body{
 }
 
 #page1{
-    height: 100vh;
-    width: 100vw;
+    min-height: 100vh;
+    width:100%;
     background-color: #EFEAE3;
     position: relative;
+    /* padding: 0 2vw; */
 }
 nav{
-    padding: 2vw 2vw;
+    padding: 2vw;
     width: 100%;
     /* background-color: rgb(204, 156, 156); */
     display: flex;
@@ -32,5 +39,68 @@ nav{
     border: 1px solid rgb(152, 128, 128);
     border-radius: 50px;
     font-weight: 500;
-    color: black;
+    position: relative;
+    color: rgb(14, 14, 14);
+    overflow: hidden;
+    transition: all ease 0.4s;
 }
+#nav-part2 h4 a{
+    text-decoration: none;
+    color: #000000bb;
+    position: relative;
+    z-index: 9;
+}
+
+#nav-part2 h4:hover a{
+    color: #fff;
+}
+#nav-part2 h4::after{
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background-color: black;
+    left: 0;
+    bottom: -100%;
+    border-radius: 50%;
+    transition: all ease 0.4s;
+    
+}
+
+#nav-part2 h4:hover::after{
+ bottom: 0;
+ border-radius: 0;
+}
+
+#center{
+    height: 65vh;
+    width: 100vw;
+    /* background-color: rgb(50, 69, 63);  */
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;  
+    border-bottom: 1px solid #0000003c;
+    padding: 2vw;
+    /* padding-bottom: 2vw;  */
+}
+
+#left h3{
+    width: 25vw;
+    font-size: 1.8vw;
+    line-height: 2vw;
+}
+#center h1{
+    font-size: 10vw;
+    line-height: 8vw;
+    text-align: right;
+}
+
+#page1 video{
+  width: 100%;
+  padding: 2vw;
+  border-radius: 50px;
+  margin-top: 4vw;
+
+}
+
+
