--- a/ShadowStudio/style.css
+++ b/ShadowStudio/style.css
@@ -22,7 +22,7 @@ html,body{
     /* padding: 0 2vw; */
 }
 nav{
-    padding: 2vw;
+    padding: 2vw 0;
     width: 100%;
     /* background-color: rgb(204, 156, 156); */
     display: flex;
