--- a/ShadowStudio/style.css
+++ b/ShadowStudio/style.css
@@ -96,11 +96,80 @@ nav{
 }
 
 #page1 video{
+    position: relative;
   width: 100%;
   padding: 2vw;
   border-radius: 50px;
   margin-top: 4vw;
 
+}
+
+#hero-shape{
+    position: absolute;
+    width: 46vw;
+    height: 36vw;
+    right: 0;
+    top: 65vh;
+}
+
+#hero-1{
+    background-color: #FE320A;
+    height: 100%;
+    width: 100%;
+
+    border-top-left-radius: 50%;
+    border-bottom-left-radius: 50%;
+    filter: blur(10px);
+    position: absolute;
+}
+#hero-2{
+    background: linear-gradient(#FE320A,#fe3f0a);
+    height: 30vw;
+    width: 30vw;
+    position: absolute;
+    filter: blur(25px);
+    border-radius: 50%;
+    position: absolute;
+    animation-name: anime2;
+    animation-duration: 5s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+
+#hero-3{
+    background: linear-gradient(#FE320A,#fe3f0a);
+    height: 30vw;
+    width: 30vw;
+    position: absolute;
+    border-radius: 50%;
+    filter: blur(25px);
+    animation-name: anime1;
+    animation-duration: 5s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+
+}
+
+@keyframes anime1 {
+    from{
+        transform: translate(55%,-3%);
+    }
+    to{
+       transform: translate(0%,10%);
+    }
+    
+}
+
+@keyframes anime2 {
+      from{
+         transform: translate(5%,-5%);
+      } 
+      to{
+         transform: translate(-20%,30%
+         )
+      }   
 }
 
 
