making an marque animation

--- a/ShadowStudio/style.css
+++ b/ShadowStudio/style.css
@@ -109,7 +109,7 @@ nav{
     width: 46vw;
     height: 36vw;
     right: 0;
-    top: 65vh;
+    top: 75vh;
 }
 
 #hero-1{
@@ -173,3 +173,49 @@ nav{
 }
 
 
+#page2{
+    min-height: 100vh;
+    width: 100vw;
+    background-color:#EFEAE3;
+    padding: 7vw 0;
+}
+#moving-text{
+    white-space: nowrap;
+    overflow-x: auto;
+}
+#moving-text::-webkit-scrollbar{
+    display: none;
+}
+.con{
+    white-space: nowrap;
+    display: inline-block;
+    animation-name: move;
+    animation-duration: 10s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+#moving-text h1{
+    /* background-color: #fff; */
+    font-size: 9vw;
+    /* overflow-x: auto; */
+    /* background-color: #fff; */
+    display: inline-block;
+}
+
+#gola{
+    height: 70px;
+    width: 70px;
+    background-color: #FE320A;
+    border-radius: 50%;
+    display: inline-block;
+    margin: 1vw 2vw;
+}
+
+@keyframes move {
+    from{
+     transform: translateX(0);
+    }
+    to{
+   transform: translateX(-100%);
+    }
+}
