--- a/ShadowStudio/style.css
+++ b/ShadowStudio/style.css
@@ -261,17 +261,30 @@ nav{
 
 }
 #page2 #gooey{
-    height: 30vw;
-    width: 30vw;
+    height: 32vw;
+    width: 32vw;
     position: absolute;
-    background:linear-gradient(to top,#FE320A,#fe5b0a);
+    background:linear-gradient(to top,#ff2d03,#ff5c0b);
     border-radius: 50%;
     top: 58%;
     left: 25%;
-    filter: blur(20px);
+    filter: blur(15px);
+    animation-name: gooey;
+    animation-duration: 6s;
+    animation-timing-function: ease-in-out;
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
 
 }
-
+@keyframes gooey {
+    from{
+      transform: translate(10%,-10%) skew(0);
+    }
+    to{
+      transform: translate(-10%,10%) skew(-12deg);
+    }
+    
+}
 #page3{
     min-height: 100vh;
     width: 100%;background-color: #EFEAE3;
